# investment-dashboard-backend

./: .env.example  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: allocations.py  assets.py  auth.py  clients.py  dashboard.py  performance.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  allocation.py  asset.py  client.py  daily_return.py  user.py
app/schemas/: __init__.py  allocation.py  asset.py  client.py  performance.py  user.py
app/services/: cache.py  export.py  performance.py  yahoo_finance.py
app/tasks/: celery_app.py  daily_tasks.py
app/utils/: calculations.py  rate_limiter.py
app/websockets/: real_time.py
