[tool.poetry]
name = "investment-dashboard-backend"
version = "0.1.0"
description = "Backend for Investment Dashboard"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<4.0"
fastapi = "0.104.1"
uvicorn = {extras = ["standard"], version = "0.24.0"}
sqlalchemy = "2.0.23"
alembic = "1.12.1"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
passlib = {extras = ["bcrypt"], version = "1.7.4"}
pydantic = "2.5.0"
email-validator = "2.1.0"
celery = "5.3.4"
redis = "5.0.1"
httpx = "0.25.2"
aiohttp = "3.9.1"
pandas = "2.3.1"
numpy = "2.3.2"
openpyxl = "3.1.2"
websockets = "12.0"
python-dotenv = "1.0.0"
aioredis = "2.0.1"
yfinance = "0.2.28"
slowapi = "0.1.9"
fastapi-cors = "0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"